force-app/main/default/objects/cgcloud__Account_Template__c/cgcloud__Account_Template__c.object-meta.xml
<CustomObject>
    <description>holds the details of the account template object to be used for accounts.</description>
    <label>Customer Template</label>
    <nameField>
        <label>Customer Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>