force-app/main/default/objects/cgcloud__Account_Template__c/fields/cgcloud__Available_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Available_Product_Level__c</fullName>
    <description>Specifies the multiple set of values user can choose which will be further used for aggregation on the calculation grid for account plan.</description>
    <label>Available Product Aggregation Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Flavor</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>