force-app/main/default/objects/cgcloud__Account_Template__c/fields/cgcloud__Has_Promotions_in_Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Has_Promotions_in_Business_Plan__c</fullName>
    <description>Shows the Promotions tab in customer business plan records.</description>
    <inlineHelpText>Shows the Promotions tab in customer business plan records.</inlineHelpText>
    <label>Show Promotions in Business Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
                <default>true</default>
                <label>Enabled</label>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>