force-app/main/default/objects/cgcloud__Account_Template__c/fields/cgcloud__Initial_Roles__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initial_Roles__c</fullName>
    <description>Set of roles that a new account gets, when it&apos;s created on the CGCloud Mobility App.</description>
    <label>Initial Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>customer</fullName>
            </value>
            <value>
                <fullName>deliveryrecipient</fullName>
            </value>
            <value>
                <fullName>order</fullName>
            </value>
            <value>
                <fullName>payer</fullName>
            </value>
            <value>
                <fullName>store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>