force-app/main/default/objects/cgcloud__Account_Template__c/recordTypes/cgcloud__Customer.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer</fullName>
    <active>true</active>
    <description>This Record Type will be used to create Customer Template of Type Customer</description>
    <label>Customer</label>
</RecordType>