force-app/main/default/objects/cgcloud__Account_Template__c/listViews/cgcloud__Account_Templates.listView-meta.xml
<ListView>
    <fullName>cgcloud__Account_Templates</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Active__c</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>Account Templates</label>
    <language>en_US</language>
</ListView>